--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,28 @@
+body {
+  background-image: url("https://images.unsplash.com/photo-1586075010923-2dd4570fb338?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cGFwZXIlMjBiYWNrZ3JvdW5kfGVufDB8fDB8fA%3D%3D&w=1000&q=80");
+  position: relative;
+  background-size: cover;
+  font-family: "Space Mono", monospace;
+}
+
+a {
+  color: #77c7af;
+}
+
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 .App-header {
   margin: 30px 0;
 }
 
 .App-logo {
-  max-width: 200px;
+  max-width: 300px;
   display: block;
   margin: 0 auto;
+  padding: 30px;
 }
 
 .App-footer {
