--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,1 +1,26 @@
+.Dictionary h1 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
 
+.Dictionary section {
+  background: rgb(255, 255, 255);
+  padding: 30px;
+  border-radius: 50px;
+  box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
+  margin: 20px 0;
+}
+
+.Dictionary input {
+  width: 100%;
+  border-radius: 50px;
+  padding: 6px 10px;
+  color: rgb(28, 113, 153);
+  border: 1px solid #ddd;
+}
+
+.Dictionary .hint {
+  font-size: 10px;
+  margin-top: 15px;
+}
